Fix filenames not wrapping on viewer

--- a/src/visualization/display/side-panel/panels/info/info.css
+++ b/src/visualization/display/side-panel/panels/info/info.css
@@ -11,6 +11,9 @@
   font-weight: bold;
   justify-self: end;
 }
+.panel__info-name > :nth-child(2) {
+  overflow-wrap: break-word;
+}
 .panel__info-name > :nth-child(3) {
   grid-column: 1/3;
   justify-self: center;
